# temp

./: 0056.csv  ATR-Based Dynamic Stop-Loss Support Breakout Short Quantitative Trading Strategy.py  Alpha Picks Weekly Market Recap (6).docx  CARV_MODEL.py  Cheapest-to-Deliver (CTD) collateral pricing model.py  Dear Neelan.docx  Deep Learning for Enhanced Index Tracking Analysis and Implementation.py  Fast Reversal Heikin Ashi Moving Average Combination Strategy Analysis.py  Fixed Multi-Timeframe Dynamic Volatility Tracking Strategy Analysis.py  Gram-Charlier methods for regime-switching and stochastic volatility in exponential Lévy models.py  Hi Angus.docx  Implementation of Randomized Signatures for Portfolio Optimization.py  Implementation of Trade Co-occurrence Analysis and Strategy.py  Market Making with Fads Implementation of Optimal Strategies.py  Mean-Reverting Model of Exchange Rate Risk Premium Implementation and Testing.py  Multi-Cloud Tier Trend Following Strategy Implementation.py  Multi-Dimensional Technical Indicator Fusion Trend Following Strategy Implementation and Testing.py  Multi-Indicator Fusion Automated Trend Following Strategy Analysis.py  Multi-Period Bollinger Breakout Momentum Capture.py  Multi-Phase Lunar Momentum Rotation Strategy Analysis.py  Multi-Structure Price Resonance Quantitative Strategy.py  Multi-Structure Price Resonance.py  Normalized Risk Value Dynamic Threshold.py  Optimal Asset Allocation for Outperforming a Stochastic Benchmark Target.py  Optiver.docx  Optiver低延时交易 核心解密.docx  Optiver低延时交易 核心解密.odt  Optiver低延时硬件运维实践.docx  RSI Momentum Oscillator SwingRadar Trading Strategy.py  Robust Deep Hedging.py  Strong Trend ADX Momentum Filtered Entry Quantitative Trading Strategy.py  Subject1.docx  TeMoP.py  Testing Hurst Parameter Estimation for Rough Stochastic Volatility Models.py  Too Central to Fail Analyzing Financial Network Vulnerabilities.py  Uncovered Interest Rate Parity Strategy Analysis.py  Volatility Cluster Reversion Strategy Analysis.py  bloomberg_vpin.py  bocpd_bloomberg.py  download_0050_pcf.py  (+45 more)
CRO/: Chronological Return Order.py
DNA of security return/: DNA of security return.py
Data driven integration of regularized mean variance portfolio/: Data-driven integration of regularized mean-variance portfolios.py  新建 Microsoft Word 文档.docx
Deep Learning for portfolio optimization/: Deep Learning for Portfolio Optimization.py
Dissecting Characteristics Nonparametrically/: cvxpy_glasso.py  cvxpy_glasso_with_tune_param.py  cvxpy_glasso_with_tune_param_bic.py
ETF_Data/: 159217_data_20250412.xlsx  159302_data_20250412.xlsx  159303_data_20250412.xlsx  159312_data_20250412.csv  159312_data_20250412.xlsx  159316_data_20250412.csv  159316_data_20250412.xlsx  159318_data_20250412.xlsx  159323_data_20250412.csv  159323_data_20250412.xlsx  159331_data_20250412.xlsx  159333_data_20250412.csv  159333_data_20250412.xlsx  159501_data_20250412.xlsx  159506_data_20250412.csv  159506_data_20250412.xlsx  159509_data_20250412.csv  159509_data_20250412.xlsx  159513_data_20250412.xlsx  159519_data_20250412.xlsx  159545_data_20250412.xlsx  159557_data_20250412.csv  159557_data_20250412.xlsx  159561_data_20250412.csv  159561_data_20250412.xlsx  159567_data_20250412.xlsx  159568_data_20250412.csv  159568_data_20250412.xlsx  159569_data_20250412.csv  159569_data_20250412.xlsx  159570_data_20250412.csv  159570_data_20250412.xlsx  159577_data_20250412.csv  (+187 more)
backtest engineering c++/: AggressiveStrategy.cxx  CMakeLists.txt  DebugConsole.hxx  Hdf5DataConsumer.hxx  Hdf5FixedFormatReader.cxx  Hdf5TableFormatReader.hxx  IndicatorLogger.cxx  IndicatorLogger.hxx  MultiInstrMktDataFileReader.cxx  OrderContainer.hxx  Price.hxx  Quantity.hxx  StrategyBase.cxx  Validity.hxx  Window.hxx  backtest.rar  conf.json  instrument.cxx
backtest engineering c++/backtest/: AggressiveStrategy.hxx  CMakeLists.txt  Configurable.cxx  Configurable.hxx  Hdf5DataConsumer.cxx  LightGBMPlugin.cxx  LightGBMPlugin.hxx  MultiInstrMktDataFileReader.hxx  Order.cxx  Order.hxx  OrderContainer.cxx  SerialisableEnum.hxx  Side.hxx  SingleInstrMktDataFileReader.cxx  SingleInstrMktDataFileReader.hxx  StrategyBase.hxx  TickLadder.cxx  TickLadder.hxx  TradingIndicatorFileReader.cxx  TradingIndicatorFileReader.hxx  TradingIndicators.cxx  TradingIndicators.hxx  instrument.hxx  main.cxx
backtest engineering c++/backtest Engineering/: CMakeLists.txt
backtest engineering c++/backtest Engineering/backtest Engineering/: Averager.hxx  CMakeLists.txt  DebugConsole.cxx  Hdf5FixedFormatReader.hxx  Hdf5Reader.cxx  Hdf5Reader.hxx  Hdf5TableFormatReader.cxx  HistoricalDataHolder.cxx  HistoricalDataHolder.hxx  LightGBMPlugin.cxx  MarketDataFileReader.hxx  MultiInstrMktDataFileReader.cxx  MultiInstrMktDataFileReader.hxx  OrderContainer.cxx  OrderContainer.hxx  SingleInstrMktDataFileReader.cxx  Trade.cxx  Trade.hxx  TradingIndicatorFileReader.cxx  TradingIndicators.cxx  Utils.hxx  Version.hxx  Window.cxx  backtest Engineering.cpp  backtest Engineering.h  instrument.cxx  instrument.hxx  main.cxx
backtest engineering c++/backtest/backtest/: CMakeLists.txt  backtest.cpp  backtest.h
test idea/Agricultural Commodity Futures Trading Strategy with Bloomberg Data/HFT_Functional_Control_Cpp/: CMakeLists.txt  README.md
test idea/Agricultural Commodity Futures Trading Strategy with Bloomberg Data/HFT_Functional_Control_Cpp/examples/: simple_example.cpp
test idea/Agricultural Commodity Futures Trading Strategy with Bloomberg Data/HFT_Functional_Control_Cpp/include/: ClosedFormController.h  ModelExplainability.h  NeuralNetworkController.h  OptimalExecutionSimulator.h  TradingNetwork.h
test idea/Agricultural Commodity Futures Trading Strategy with Bloomberg Data/HFT_Functional_Control_Cpp/src/: ClosedFormController.cpp  ModelExplainability.cpp  NeuralNetworkController.cpp  OptimalExecutionSimulator.cpp  TradingNetwork.cpp  main.cpp
(+834 files in other folders)
